Fix: Corregir estructura de renderizado y conectar API CheapShark
- Arreglar declaración de variables dentro del forEach
- Agregar parámetro a renderizarVideojuegos()
- Corregir URL de la API (remover caracteres escapados)
- Arreglar HTML malformado en card
- Agregar llamada inicial a cargarVideojuegosInicial()
- Agregar elementos de estado (carga/error) en HTML

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,16 @@
  
     <!-- GRID DE VIDEOJUEGOS -->
     <section id="grid-videojuegos">
+
       <h2 class="text-lg font-semibold mb-4 text-slate-800">Videojuegos destacados</h2>
- 
+      <!--ESTADO DE CARGA-->      
+      <p id="estado-carga">Cargando...</p>
+
+      <!--ESTADO DE ERROR-->
+      <div id="estado-error" class="hidden" role="alert" aria-live="polite">
+        <p class="text-red-500">Error al cargar los videojuegos.</p>
+      </div>
+
       <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         
 
